Contract Configurator 0.7.14
- Expressions now work in child nodes (for WaypointGenerator and other behaviours that support it).

Contract Configurator 0.7.13
- Fix exception when loading types from assemblies that have been improperly compiled (thanks SpacedInvader).

Contract Configurator 0.7.12
- Fix issue when loading part names with non-standard characters (thanks tattagreis).
- Fix issue with using custom behaviours.
- Can now provide multiple techs, parts and part modules in PartModuleUnlocked, PartUnlocked and TechResearched requirements.
- TechResearched requirement now supports selecting techs by specifying parts.
- WaypointGenerator now supports a hidden attribute for waypoints.
- Hash contract configuration details, and cancel offered contracts if the hashed values do not match.  This prevents old contracts from staying on offer when a contract pack is upgraded.
- Improved handling of invalid vessel identifiers.
- SpawnVessel now properly supports landed vessels.
- Support for hierarchies of contract groups.
- Fixes for Expression requirement.
- Minor bug fixes.

Contract Configurator 0.7.11
- Fixed possible NRE issue when loading VesselParameterGroup (thanks Monopropellant & FreakyHydra).
- Fix to undocking issue where KSP physics goes nuts.

Contract Configurator 0.7.10
- Fixes to vessel hashing to work with unloaded vessels.  Fixes some issues with duration timers resetting.
- Fix SCANsat issue where number instead of name of scan gets displayed.
- Expressions support 'null' as a value.
- PlantFlag no longer uses the stock parameter and is now a VesselParameter.  Closes silly exploits.

Contract Configurator 0.7.9
- Add support for Part (AvailablePart) in expressions.
- Fix to passengers not being seated when the capsule crew capacity is bigger than the number of seats in the IVA (thanks SpaceNomand).
- More fixes to vessel tracking (fixes issues with RemoteTech contract pack).  Thanks to Invader Myk.
- Minor bug fixes.

Contract Configurator 0.7.8