@@ -1,5 +1,8 @@
 Contract Configurator 0.7.14
 - Expressions now work in child nodes (for WaypointGenerator and other behaviours that support it).
+- Fix issues with fairness when generating contracts (should now give appropriate consideration to all contract packs).
+- Fix errors in Tourism contract pack introduced by 0.7.13.
+- Minor bug fixes.
 
 Contract Configurator 0.7.13
 - Fix exception when loading types from assemblies that have been improperly compiled (thanks SpacedInvader).
